<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.PelariActivity">

    <include
        android:id="@+id/v_toolbar"
        layout="@layout/view_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <include layout="@layout/error_layout" />

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Spinner
                android:id="@+id/spNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nama"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                tools:text="Name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/jenis_kelamin"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/laki_laki" />

                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/perempuan" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txtUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/umur"
                    android:inputType="number"
                    android:textColor="@drawable/editext_selector" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/Layout2Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/simpan" />
        </LinearLayout>


    </FrameLayout>
</LinearLayout>